# ISEC-POO-2024-2025-Desert-Simulator-CPP

./: README.md
Sources/tp/: Barbara.cpp  Barbara.h  Buffer.cpp  Buffer.h  CMakeLists.txt  Caravana.cpp  Caravana.h  Cidade.cpp  Cidade.h  Comercio.cpp  Comercio.h  Entidade.cpp  Entidade.h  Excecoes.cpp  Excecoes.h  Global.h  Item.cpp  Item.h  Militar.cpp  Militar.h  PaiNatal.cpp  PaiNatal.h  Parametros.cpp  Parametros.h  Simulador.cpp  Simulador.h  Utilizador.cpp  Utilizador.h  main.cpp
